syntax = 'proto3';

package loms;

option go_package = "route256/checkout/pkg/loms";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";


service Loms {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/createOrder"
      body: "*"
    };
  }

  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {
    option (google.api.http) = {
      post: "/v1/listOrder"
      body: "*"
    };
  }

  rpc OrderPayed(OrderPayedRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/orderPayed"
      body: "*"
    };
  }

  rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/cancelOrder"
      body: "*"
    };
  }

  rpc Stocks(StocksRequest) returns (StocksResponse) {
    option (google.api.http) = {
      post: "/v1/stocks"
      body: "*"
    };
  }
}

message CreateOrderRequest {
  int64 user = 1 [(validate.rules).int64.gte = 1];
  repeated Item items = 2 [(validate.rules).repeated.min_items = 1];
}

message CreateOrderResponse {
  int64 order_id = 1;
}

message ListOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gte = 1];
}

message ListOrderResponse {
  string status = 1;
  int64 user = 2;
  repeated Item items = 3;
}

message OrderPayedRequest {
  int64 order_id = 1 [(validate.rules).int64.gte = 1];
}

message CancelOrderRequest {
  int64 order_id = 1 [(validate.rules).int64.gte = 1];
}

message StocksRequest {
  uint32 sku = 1 [(validate.rules).uint32.gte = 1];
}

message StocksResponse {
  repeated Stock stocks = 1;
}

message Item {
  uint32 sku = 1 [(validate.rules).uint32.gte = 1];
  uint32 count = 2 [(validate.rules).uint32 = {gte:1, lt: 65536}];
}

message Stock {
  int64 warehouse_id = 1;
  uint64 count = 2;
}


